Embedded cassandra for tests